# BWXML

./: .gitignore  CMakeLists.txt
BWXML/: main.cpp
src/bwxml-lib/: BWReader.cpp  BWWriter.cpp
src/bwxml-python3/: pythonModule.cpp
